# PLATEAU-Tutorial

./: .gitattributes  .gitignore  README.md  board.ps1  learn.ps1  pyproject.toml  requirements.txt
PLATEAUTutorial/Assets/: BusAgent.prefab  BusStop.prefab  Canvas.prefab  Evacuee.prefab  EvacueeMale.prefab  ExMark.prefab  NonSelected.mat  Passenger.prefab  Selected.mat  ShelterBldg.prefab  SubTran.prefab  sign_174.prefab
PLATEAUTutorial/Assets/2025_01_29-19_55_38/: EvaRatesPerSec_Episode_0.csv  EvaRatesPerSec_Episode_1.csv  EvaRatesPerSec_Episode_2.csv
PLATEAUTutorial/Assets/2025_02_05-21_52_10/: EvaRatesPerSec_Episode_0.csv  EvaRatesPerSec_Episode_1.csv  EvaRatesPerSec_Episode_10.csv  EvaRatesPerSec_Episode_11.csv  EvaRatesPerSec_Episode_12.csv  EvaRatesPerSec_Episode_13.csv  EvaRatesPerSec_Episode_14.csv  EvaRatesPerSec_Episode_15.csv  EvaRatesPerSec_Episode_16.csv  EvaRatesPerSec_Episode_17.csv  EvaRatesPerSec_Episode_18.csv  EvaRatesPerSec_Episode_19.csv  EvaRatesPerSec_Episode_2.csv  EvaRatesPerSec_Episode_20.csv  EvaRatesPerSec_Episode_21.csv  EvaRatesPerSec_Episode_22.csv  EvaRatesPerSec_Episode_23.csv  EvaRatesPerSec_Episode_24.csv  EvaRatesPerSec_Episode_25.csv  EvaRatesPerSec_Episode_26.csv  EvaRatesPerSec_Episode_27.csv  (+11 more)
PLATEAUTutorial/ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
Rec-20241217/: 20241217Rec.md
docs/: tutorial-1.md
docs/Tutorial-1/: tutorial-1.md
docs/Tutorial-1-Inference/: README.md
docs/Tutorial-2/: tutorial-2.md
src/plateau_tutorial/: __init__.py  graph.ipynb
(+517 files in other folders)
