[project]
name = "plateau-tutorial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsyu12345", email = "syukut@gmail.com" }
]
dependencies = [
    "torch==2.2.1",
    "mlagents==1.1.0",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plateau_tutorial"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
